--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,3 +12,86 @@ img,
 video {
   display: block;
 }
+
+body {
+  background-color: #c4d2f5;
+  margin: 100px auto auto 100px;
+}
+
+.player {
+  font-family: "Inter", sans-serif;
+  width: 440px;
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 20px;
+  gap: 30px;
+  background: white;
+  box-shadow: 0 0 0 20px rgba(255, 254, 254, 0.15);
+}
+
+.player-header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
+
+.player-track-title {
+  font-size: 18px;
+  font-weight: 700;
+}
+
+.player-track-artist {
+  font-size: 15px;
+  color: #909090;
+  font-weight: 700;
+}
+
+audio {
+  display: none;
+}
+
+.player-progress {
+  display: flex;
+  align-items: center;
+  align-self: stretch;
+  gap: 15px;
+}
+
+.player-time {
+  font-weight: 700;
+  font-size: 15px;
+  color: #909090;
+}
+
+.player-progress-bar {
+  display: flex;
+  width: 100%;
+  height: 6px;
+  background-color: #f6f6ef;
+  border-radius: 3px;
+}
+
+.player-progress-inner {
+  width: 120px;
+  background-color: #e783bc;
+  border-radius: 3px;
+}
+
+.player-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 74px;
+  height: 74px;
+  background-color: #e783bc;
+  border-radius: 50%;
+}
+
+i {
+  font-family: "Font Awesome 6 Free";
+  font-size: 20px;
+  color: white;
+}
